added new pages, mobile version, edited footer

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                         <a href="./index.html" class="nav-list__link nav-list__link_active">Projects</a>
                     </li>
                     <li class="nav-list__item">
-                        <a href="./skills.html" class="nav-list__link nav-list__link_active">Skills</a>
+                        <a href="./skills.html" class="nav-list__link">Skills</a>
                     </li>
                     <li class="nav-list__item">
-                        <a href="./contacts.html" class="nav-list__link nav-list__link_active">Contacts</a>
+                        <a href="./contacts.html" class="nav-list__link">Contacts</a>
                     </li>
                 </ul>
             </div>
@@ -38,14 +38,14 @@
             <div class="header__text">
                 <p>with passion for learning and creating.</p>
             </div>
-            <a href="#" class="button">Download CV</a>
+            <a href="https://github.com/raminsultangaliev" target="_blank" class="button">Visit GitHub</a>
         </div>
     </header>
 
     <main>
-        <section class="projects">
+        <section class="projects section">
             <div class="container">
-                <h2 class="projects__title">Projects</h2>
+                <h2 class="section__title">Projects</h2>
                 <ul class="projects__list">
                     <li class="project">
                         <a href="./project-page.html">
@@ -92,14 +92,12 @@
         <div class="container">
             <div class="footer__wrapper">
                 <ul class="social">
-                    <li class="social__item"><a href="#"><img src="images/icons/vk.svg" alt="Link 1"></a></li>
-                    <li class="social__item"><a href="#"><img src="images/icons/instagram.svg" alt="Link 2"></a></li>
-                    <li class="social__item"><a href="#"><img src="images/icons/twitter.svg" alt="Link 3"></a></li>
-                    <li class="social__item"><a href="#"><img src="images/icons/github.svg" alt="Link 4"></a></li>
-                    <li class="social__item"><a href="#"><img src="images/icons/linkedIn.svg" alt="Link 5"></a></li>
+                    <li class="social__item"><a href="https://vk.com/id523957315" target="_blank"><img src="images/icons/vk.svg" alt="Link 1"></a></li>
+                    <li class="social__item"><a href="https://t.me/rsul07" target="_blank"><img src="images/icons/telegram.svg" alt="Link 2"></a></li>
+                    <li class="social__item"><a href="https://github.com/raminsultangaliev" target="_blank"><img src="images/icons/github.svg" alt="Link 3"></a></li>
                 </ul>
                 <div class="copyright">
-                    <p>&copy; 2023 frontend-dev.com</p>
+                    <p>&copy; 2023</p>
                 </div>
             </div>
         </div>
