added dark theme and theme switcher

--- a/skills.html
+++ b/skills.html
@@ -13,6 +13,10 @@
         <div class="container">
             <div class="nav-row">
                 <a href="./index.html" class="logo"><strong>Freelancer</strong> portfolio</a>
+                <button class="theme-button">
+                    <img src="images/icons/sun.svg" alt="Light mod" class="theme-button__icon">
+                    <img src="images/icons/moon.svg" alt="Dark mod" class="theme-button__icon">
+                </button>
                 <ul class="nav-list">
                     <li class="nav-list__item">
                         <a href="./index.html" class="nav-list__link">Projects</a>
@@ -65,5 +69,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
